package com.company;

public class Eagle implements IBird
{
    public void fly()
    {
        System.out.println("Eagle is flying very high.");
    }
}
