package com.company;

public class Falcon implements IBird
{
    public void fly()
    {
        System.out.println("Falcon is flying high.");
    }
}
