package com.company;

public class Pigeon implements IBird
{
    public void fly()
    {
        System.out.println("Pigeon is flying softly 0--0");
    }
}
