package com.company;

public class Owl extends FlyingBird
{
    public void fly()
    {
        System.out.println("Owl is flying...");
    }
}
