@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Eagle {
        + fly()
    }
  }
  

  namespace com.company {
    class com.company.Falcon {
        + fly()
    }
  }
  

  namespace com.company {
    abstract class com.company.FlyingBird {
        {abstract} + fly()
        + walk()
    }
  }
  

  namespace com.company {
    class com.company.GameUser {
        + GameUser()
        + move()
    }
  }
  

  namespace com.company {
    interface com.company.IBird {
        {abstract} + fly()
        {abstract} + walk()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    abstract class com.company.NonFlyingBird {
        + fly()
        {abstract} + walk()
    }
  }
  

  namespace com.company {
    class com.company.Owl {
        + fly()
    }
  }
  

  namespace com.company {
    class com.company.Penguin {
        + walk()
    }
  }
  

  namespace com.company {
    class com.company.Pigeon {
        + fly()
    }
  }
  

  com.company.Eagle -up-|> com.company.FlyingBird
  com.company.Falcon -up-|> com.company.FlyingBird
  com.company.FlyingBird .up.|> com.company.IBird
  com.company.GameUser o-- com.company.IBird : character
  com.company.NonFlyingBird .up.|> com.company.IBird
  com.company.Owl -up-|> com.company.FlyingBird
  com.company.Penguin -up-|> com.company.NonFlyingBird
  com.company.Pigeon -up-|> com.company.FlyingBird


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
